Parte oscura acabada

--- a/index.html
+++ b/index.html
@@ -4,9 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Webpage title</title>
 </head>
 <body>
+    <div class="container-dark">
+        <div class="container-item1">
+            Header logo
+        </div>
+        <div class="container2">
+            <div class="container-item2" id="top">
+                Header link 1
+            </div>
+            <div class="container-item2" id="top">
+                Header link 2
+            </div>
+            <div class="container-item2" id="top">
+                Header link 3
+            </div>
+        </div>
+    </div>
+    <div class="container-dark main-section">
+        <div class="text-section">
+            <div class="container-item3">
+                Main text / introduction
+            </div>
+            <div class="container-item2">
+                Secondary text / introduction 
+            </div>
+            <div class="container-item2 button">
+                <a>Sign up</a>
+            </div>
+        </div>
+        <div class="image-section">
+            <img src="images/img1.webp" alt="imagen" height="250px">
+        </div>
+    </div>
+
     
 </body>
 </html>
