Crrección error imagen

--- a/index.html
+++ b/index.html
@@ -4,39 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Webpage title</title>
+    <title>Webpage title</title>   <!--Change content-->
 </head>
 <body>
     <div class="container-dark">
         <div class="container-item1">
-            Header logo
+            Header logo  <!--Change content-->
         </div>
         <div class="container2">
             <div class="container-item2" id="top">
-                Header link 1
+                Header link 1  <!--Change content-->
             </div>
             <div class="container-item2" id="top">
-                Header link 2
+                Header link 2  <!--Change content-->
             </div>
             <div class="container-item2" id="top">
-                Header link 3
+                Header link 3  <!--Change content-->
             </div>
         </div>
     </div>
     <div class="container-dark main-section">
         <div class="text-section">
             <div class="container-item3">
-                Main text / introduction
+                Main text / introduction  <!--Change content-->
             </div>
             <div class="container-item2">
-                Secondary text / introduction 
+                Secondary text / introduction   <!--Change content-->
             </div>
             <div class="container-item2 button">
-                <a>Sign up</a>
+                Sign up  <!--Change content-->
             </div>
         </div>
         <div class="image-section">
-            <img src="images/img1.webp" alt="imagen" height="250px">
+            <img src="Images/img1.webp" alt="  Imagen" height="250px">
         </div>
     </div>
 
