Parte blanca acabada + header fijo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Webpage title</title>   <!--Change content-->
 </head>
 <body>
-    <div class="container-dark">
+    <div class="header-fixed">
         <div class="container-item1">
             Header logo  <!--Change content-->
         </div>
@@ -36,10 +36,39 @@
             </div>
         </div>
         <div class="image-section">
-            <img src="Images/img1.webp" alt="  Imagen" height="250px">
+            <img src="Images/img1.webp" alt="  Imagen" height="234px">
         </div>
     </div>
-
-    
+    <div class="container-white">
+        <div class="information-header">
+            More information   <!--Change content-->
+        </div>
+        <div class="flexbox2">
+            <div class="flexbox3">
+                <div class="flexbox4"></div>
+                <div class="flexbox5">
+                    Subtext 1   <!--Change content-->
+                </div>
+            </div>
+            <div class="flexbox3">
+                <div class="flexbox4"></div>
+                <div class="flexbox5">
+                    Subtext 2   <!--Change content-->
+                </div>
+            </div>
+            <div class="flexbox3">
+                <div class="flexbox4"></div>
+                <div class="flexbox5">
+                    Subtext 3   <!--Change content-->
+                </div>
+            </div>
+            <div class="flexbox3">
+                <div class="flexbox4"></div>
+                <div class="flexbox5">
+                    Subtext 4   <!--Change content-->
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
