--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
         </div>
         <div class="image-section">
-            <img src="Images/img1.webp" alt="  Imagen" height="234px">
+            <img src="Images/img2.webp" alt="  Imagen">
         </div>
     </div>
     <div class="container-white">
